jvm review